# Graph-Neural-Networks

./: ECOSYSTEM_ARCHITECTURE.md  README.md  REPORT.md  RESEARCH_ROADMAP.md  app.py  ecosystem_architecture.md  requirements.txt
mesh-core/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  setup.py
mesh-core/benchmarks/: benchmark_basic.py
mesh-core/docs/: index.md
mesh-core/examples/: basic_usage.py
mesh-core/mesh_core/: __init__.py  structures.py
mesh-core/tests/: test_basic.py
mesh-core/tutorials/: tutorial_01_getting_started.md
mesh-hub/: ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
mesh-hub/benchmarks/: benchmark_basic.py
mesh-hub/docs/: index.md
mesh-ml/: ARCHITECTURE.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  setup.py
mesh-serve/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  setup.py
mesh-sim/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  setup.py
mesh-sim/.github/workflows/: ci.yml
mesh-sim/benchmarks/: benchmark_basic.py
mesh-sim/docs/: index.md
mesh-sim/examples/: basic_usage.py
mesh-sim/mesh_sim/: __init__.py  datasets.py  generation.py
mesh-sim/tests/: test_generation.py
mesh-sim/tutorials/: tutorial_01_getting_started.md
mesh-vis/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  setup.py
mesh-vis/.github/workflows/: ci.yml
mesh-vis/benchmarks/: benchmark_basic.py
mesh-vis/docs/: index.md
mesh-vis/examples/: basic_usage.py
mesh-vis/mesh_vis/: __init__.py  plotting.py
mesh-vis/tests/: test_plotting.py
mesh-vis/tutorials/: tutorial_01_getting_started.md
(+26 files in other folders)
