[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-sim"
version = "0.1.0"
description = "Scientific Mesh Intelligence Simulation and Data Generation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "torch>=1.12.0",
    "torch-geometric>=2.2.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "ruff"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mesh_sim"]
