[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-vis"
version = "0.1.0"
description = "Scientific Mesh Intelligence Visualization Tools"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "torch>=1.12.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "ruff"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mesh_vis"]
